# lua-experiments

./: .dockerignore  .gitignore  CMakeLists.txt  Dockerfile  Makefile
.github/actions/: update_cmake.yml
.github/workflows/: main.yml
CMake/: Compile.cmake
adapters/: CMakeLists.txt
adapters/catch/: CMakeLists.txt
adapters/catch/src/: catch.m.cpp
adapters/m_catch2/: CMakeLists.txt
scripts/: average.lua
sql/: friends.sql
src/: CMakeLists.txt
src/adapters/: CMakeLists.txt
src/adapters/a_catch/: CMakeLists.txt
src/adapters/a_lua/: CMakeLists.txt  docs.txt  lua_bind.h  lua_bind.t.cpp  lua_function_traits.h  lua_state.cpp  lua_state.h
src/adapters/a_sqlite/: CMakeLists.txt  a_sqlite_context.cpp  a_sqlite_context.h  a_sqlite_database.cpp  a_sqlite_database.h  a_sqlite_database.t.cpp  a_sqlite_statement.cpp  a_sqlite_statement.h  a_sqlite_value.cpp  a_sqlite_value.h  cities.csv  sqlite_database.cpp  sqlite_database.h  sqlite_statement.cpp  sqlite_statement.h
src/applications/demo/: CMakeLists.txt  main.cpp
src/catch2/: CMakeLists.txt
src/formula/: CMakeLists.txt  datum.cpp  datum.h  datum.t.cpp  lexer.cpp  lexer.h  lexer.t.cpp  parser.h  parser.t.cpp  token.cpp  token.h  token.t.cpp
src/standalones/: CMakeLists.txt
src/standalones/allocator/: CMakeLists.txt  allocator.h  default_allocator.h  system_allocator.cpp  system_allocator.h
src/standalones/formula/: CMakeLists.txt  datum.cpp  datum.h  datum.t.cpp  lexer.cpp  lexer.h  lexer.t.cpp  parser.cpp  parser.h  parser.t.cpp  token.cpp  token.h  token.t.cpp
src/standalones/logger/: CMakeLists.txt  logger.h
src/standalones/main/: CMakeLists.txt  main.cpp  main.h
src/standalones/singleton/: CMakeLists.txt  singleton.h
standalones/: CMakeLists.txt
standalones/formula/: CMakeLists.txt
standalones/formula/include/: datum.h  lexer.h
standalones/formula/src/: parser.cpp
standalones/formula/test/: datum.t.cpp  lexer.t.cpp  parser.t.cpp  token.t.cpp
